Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2077

CMake project show generated files although 'Hide generated files' option is active

    XMLWordPrintable

Details

    Description

      How to reproduce

      Import the SpeedCrunch example, accept all defaults
      Make sure that "Hide generated files" is checked in Project Explorer
      Project tree contains directory "../qtcreator-build/gui" with all the generated moc_ files.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            kkohne Kai Köhne
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes