CMake ProjectManager: Hide generated files

The heuristic to detect generated files is pretty basic and tries to
match the filenames against 3 patterns.

Task-Nr: QTCREATORBUG-2077